# geospatial-challenge-camp

./: .gitignore  README.md  setup.cfg
source/: conf.py  index.rst  requirements.txt
source/_static/css/: gcc.css
source/course-info/: introduction.rst
source/sites/: participants.rst  partners.rst  researchers.rst  schedule.rst  timetable.rst
