[metadata]
name = Geospatial Challenge Camp
version = 2023
license = Creative Commons 4.0
description = Geospatial Challenge Camp Finland (2023-)
author = Henrikki Tenkanen
author_email = henrikki.tenkanen@aalto.fi
url = http://geospatial-challenge-camp.readthedocs.io/
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = geoportti
github_repo = geospatial-challenge-camp